--- a/lua/plugins/lang/packs.json
+++ b/lua/plugins/lang/packs.json
@@ -25,8 +25,9 @@
 		"treesitter": ["c", "cpp", "cmake", "make"]
 	},
 	"csharp": {
-		"mason": ["csharpier"],
-		"servers": ["omnisharp"],
+		"mason_registries": ["github:Crashdummyy/mason-registry"],
+		"mason": ["csharpier", "roslyn"],
+		"servers": ["roslyn"],
 		"formatters": { "csharp": ["csharpier"] },
 		"treesitter": ["c_sharp"]
 	},
