--- a/lua/plugins/lang/packs.json
+++ b/lua/plugins/lang/packs.json
@@ -92,7 +92,7 @@
 	"lua": {
 		"mason": ["luacheck", "stylua", "lua-language-server"],
 		"linters": { "lua": ["luacheck"] },
-		"formatters": { "lua": ["prettier"] },
+		"formatters": { "lua": ["stylua", "prettier"] },
 		"servers": ["lua_ls"],
 		"treesitter": ["lua", "luadoc"]
 	},
